--- a/ckanext/mapactionevent/templates/home/index.html
+++ b/ckanext/mapactionevent/templates/home/index.html
@@ -2,7 +2,7 @@
 
 {% block primary_content %}
   <h2 class="hide-heading">{{ _('My Groups') }}</h2>
-  {% if h.events %}
+  {% if c.events %}
     <div class="wide">
       {% snippet "group/snippets/group_list.html", groups=c.events %}
     </div>
