--- a/ckanext/mapactionevent/templates/home/index.html
+++ b/ckanext/mapactionevent/templates/home/index.html
@@ -3,7 +3,7 @@
 {% block primary_content %}
   <h2 class="hide-heading">{{ _('My Groups') }}</h2>
   {% if h.events %}
-    <div class="wide">
+    <div class="simple-event-list">
       {% snippet "group/snippets/group_list.html", groups=c.events %}
     </div>
   {% else %}
