--- a/ckanext/mapactionevent/templates/mapactionevent/members.html
+++ b/ckanext/mapactionevent/templates/mapactionevent/members.html
@@ -1,5 +1,7 @@
 {% extends "group/members.html" %}
 
+{% block subtitle %}{{ _('Members') }} - {{ c.group_dict.display_name }} - {{ _('Events') }}{% endblock %}
+
 {% block content_primary_nav %}
   {{ h.build_nav_icon('event_edit', _('Edit'), id=c.group_dict.name) }}
   {{ h.build_nav_icon('event_members', _('Members'), id=c.group_dict.name) }}
