Remove the event left side bars
Contain links to group controller still, not needed (wait until design
input).

--- a/ckanext/mapactionevent/templates/mapactionevent/new.html
+++ b/ckanext/mapactionevent/templates/mapactionevent/new.html
@@ -9,6 +9,6 @@
 {% block page_header %}{% endblock %}
 
 {% block secondary_content %}
-  {% snippet "group/snippets/helper.html" %}
+    {# {% snippet "group/snippets/helper.html" %} #}
 {% endblock %}
 
