--- a/ckanext/mapactionevent/templates/mapactionevent/index.html
+++ b/ckanext/mapactionevent/templates/mapactionevent/index.html
@@ -14,3 +14,6 @@
 {% snippet 'group/snippets/event_search_form.html', form_id='group-search-form', type='event', query=c.q, sorting_selected=c.sort_by_selected, count=c.page.item_count, placeholder=_('Search events...'), show_empty=request.params, no_bottom_border=true if c.page.items, sorting = [(_('Name Ascending'), 'title asc'), (_('Name Descending'), 'title desc')] %}
 {% endblock %}
 
+{% block secondary_content %}
+    {# {% snippet "group/snippets/helper.html" %} #}
+{% endblock %}
