--- a/ckanext/mapactionevent/templates/group/snippets/info.html
+++ b/ckanext/mapactionevent/templates/group/snippets/info.html
@@ -43,7 +43,7 @@
         {{ h.follow_button('group', group.id) }}
       </div>
       <div class="mapaction-feed">
-       <a href="{{ h.url_for(controller='ckanext.mapactiongeorss.controllers.feed:MapActionGeoRssFeedController', action='custom') ~ '?groups=' ~ group.name}}"><i class="ckan-icon ckan-icon-feed"></i><span> {{ _('Event Maps') }}</span></a>
+       <a href="{{ h.url_for('mapaction_georss_event') ~ '?groups=' ~ group.name}}"><i class="ckan-icon ckan-icon-feed"></i><span> {{ _('Event Maps') }}</span></a>
       </div>
       {% endblock %}
     {% endif %}
