--- a/ckanext/mapactionevent/templates/mapactionevent/event_read_base.html
+++ b/ckanext/mapactionevent/templates/mapactionevent/event_read_base.html
@@ -11,3 +11,7 @@
   {% endif %}
 {% endblock %}
 
+{% block content_primary_nav %}
+  {{ h.build_nav_icon('event_read', _('Datasets'), id=c.group_dict.name) }}
+  {{ h.build_nav_icon('event_about', _('About'), id=c.group_dict.name) }}
+{% endblock %}
