--- a/ckanext/mapactionevent/templates/group/snippets/info.html
+++ b/ckanext/mapactionevent/templates/group/snippets/info.html
@@ -42,6 +42,8 @@
       <div class="follow_button">
         {{ h.follow_button('group', group.id) }}
       </div>
+      {% endblock %}
+      {% block feed %}
       <div class="mapaction-feed">
        <a href="{{ h.url_for('mapaction_georss_event') ~ '?groups=' ~ group.name}}"><i class="ckan-icon ckan-icon-feed"></i><span> {{ _('Event Maps') }}</span></a>
       </div>
