--- a/ckanext/mapactionevent/templates/mapactionevent/group_form.html
+++ b/ckanext/mapactionevent/templates/mapactionevent/group_form.html
@@ -33,8 +33,10 @@
 
 
 {% block delete_button %}
+{% if action == "edit" %}
   {% if h.check_access('group_delete', {'id': data.id})  %}
     {% set locale = h.dump_json({'content': _('Are you sure you want to delete this Event?')}) %}
     <a class="btn btn-danger pull-left" href="{% url_for 'event_delete', id=data.id %}" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete Event') }}{% endblock %}</a>
   {% endif %}
+{% endif %}
 {% endblock %}
