--- a/ckanext/mapactionevent/templates/mapactionevent/group_form.html
+++ b/ckanext/mapactionevent/templates/mapactionevent/group_form.html
@@ -10,8 +10,7 @@
     {% set domain = domain|replace("http://", "")|replace("https://", "") %}
     {% set attrs = {'data-module': '', 'data-module-prefix': domain, 'data-module-placeholder': '<group>'} %}
 
-    {% call form.prepend('name', label=_('Operation ID'), prepend=prefix, id='field-opid', placeholder=_(''), value=data.name, error=errors.name, attrs=attrs, is_required=false) %}
-      {{ form.info(_("Leave blank to generate a new Operation ID"), classes=['']) }}
+    {% call form.prepend('name', label=_('Operation ID'), prepend=prefix, id='field-opid', placeholder=_(''), value=data.name, error=errors.name, attrs=attrs, is_required=true) %}
     {% endcall %}
 
     {{ form.markdown('description', label=_('Description'), id='field-description', placeholder=_('Event description...'), value=data.description, error=errors.description) }}
