--- a/ckanext/mapactionevent/templates/group/snippets/group_item.html
+++ b/ckanext/mapactionevent/templates/group/snippets/group_item.html
@@ -20,6 +20,6 @@ Example:
   <a href="{{ url }}" title="{{ _('View {name}').format(name=group.display_name) }}">
   {{ _('{name}').format(name=group.display_name) }}
   </a>
-  <p>{{ group.description }}</p>
+  <p>{{ h.truncate(group.description, h.event_description_length(), whole_word=True) }}</p>
 </li>
 {% endblock %}
