--- a/ckanext/mapactionevent/templates/group/snippets/group_item.html
+++ b/ckanext/mapactionevent/templates/group/snippets/group_item.html
@@ -17,6 +17,14 @@ Example:
 {% set url = h.url_for(type ~ '_read', action='read', id=group.name) %}
 {% block item %}
 <li>
+    {% block image %}
+    <div class="image">
+      <a href="{{ group.url }}">
+        <img src="{{ group.image_display_url or h.url_for_static('/base/images/placeholder-group.png') }}" width="190" height="118" alt="{{ group.name }}" />
+      </a>
+    </div>
+    {% endblock %}
+
   <a href="{{ url }}" title="{{ _('View {name}').format(name=group.display_name) }}">
   {{ _('{name}').format(name=group.display_name) }}
   </a>
