--- a/ckanext/locationgroup/templates/locationgroup/index.html
+++ b/ckanext/locationgroup/templates/locationgroup/index.html
@@ -12,6 +12,10 @@
   {% endif %}
 {% endblock %}
 
+{% block groups_list %}
+  {% snippet "locationgroup/snippets/country_list.html", groups=c.page.items %}
+{% endblock %}
+
 {% block groups_search_form %}
 {% snippet 'group/snippets/location_search_form.html', form_id='group-search-form', type='location', query=c.q, sorting_selected=c.sort_by_selected, count=c.page.item_count, placeholder=_('Search locations...'), show_empty=request.params, no_bottom_border=true if c.page.items, sorting = [(_('Most Recent'), 'created desc'), (_('Name Ascending'), 'title asc'), (_('Name Descending'), 'title desc')] %}
 {% endblock %}
