Include Zip link in read locationgroup actions

--- a/ckanext/locationgroup/templates/locationgroup/location_read_base.html
+++ b/ckanext/locationgroup/templates/locationgroup/location_read_base.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content_action %}
+  {% snippet "mapactionimporter/snippets/import_button.html" %}
   {% if h.check_access('group_update', {'id': c.group_dict.id}) %}
     {% link_for _('Manage'), controller='ckanext.locationgroup.controllers.location_groupcontroller:LocationGroupController', action='edit', id=c.group_dict.name, class_='btn', icon='wrench' %}
   {% endif %}
