--- a/ckanext/locationgroup/templates/locationgroup/location_read_base.html
+++ b/ckanext/locationgroup/templates/locationgroup/location_read_base.html
@@ -15,3 +15,7 @@
   {{ h.build_nav_icon('location_read', _('Datasets'), id=c.group_dict.name) }}
   {{ h.build_nav_icon('location_about', _('About'), id=c.group_dict.name) }}
 {% endblock %}
+
+{% block secondary_content %}
+  {% snippet "group/snippets/locationgroup_info.html", group=c.group_dict, show_nums=true %}
+{% endblock %}
