Disable followers and datasets counts

--- a/ckanext/locationgroup/templates/locationgroup/location_read_base.html
+++ b/ckanext/locationgroup/templates/locationgroup/location_read_base.html
@@ -19,5 +19,5 @@
 {% endblock %}
 
 {% block secondary_content %}
-  {% snippet "group/snippets/locationgroup_info.html", group=c.group_dict, show_nums=true %}
+  {% snippet "group/snippets/locationgroup_info.html", group=c.group_dict, show_nums=false %}
 {% endblock %}
