--- a/ckanext/locationgroup/templates/locationgroup/index.html
+++ b/ckanext/locationgroup/templates/locationgroup/index.html
@@ -10,6 +10,9 @@
   {% if h.check_access('group_create') %}
     {% link_for _('Add Location'), controller='ckanext.locationgroup.controllers.location_groupcontroller:LocationGroupController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
   {% endif %}
+  {% if h.check_access('package_create') %}
+    {% link_for _('Add Dataset'), controller='package', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+  {% endif %}
 {% endblock %}
 
 {% block groups_list %}
